--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
     shardsvr2:
         container_name: shardsvr2
         image: mongo
-        command: mongod --shardsvr --replSet shard1rs --port 27017 --dbpath /data/db
+        command: mongod --shardsvr --replSet shardrs --port 27017 --dbpath /data/db
         ports:
             - 50002:27017
         volumes:
@@ -21,4 +21,4 @@ services:
 
 volumes:
   cfgsvr2: {}
-  shard1svr2: {}
+  shardsvr2: {}
